// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages Settings android should renders correctly 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    title="Settings"
  />
  <Component
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "backgroundColor": "#E2E4E5",
        },
      ]
    }
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "paddingHorizontal": 20,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "flex": 1,
            "fontSize": 14,
          }
        }
      >
        Enable cutting edge features
      </Text>
      <Switch
        disabled={false}
        onValueChange={[MockFunction]}
        thumbTintColor="#355974"
        value={true}
      />
    </Component>
    <Component
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        If enabled, your application will automatically install cutting edge features. Beware though: you might install versions that are not stable yet.
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#676767",
            "fontSize": 12,
            "marginTop": 10,
          }
        }
      >
        Version: 1.0.0
      </Text>
    </Component>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Object {
            "backgroundColor": "white",
            "paddingHorizontal": 20,
            "paddingVertical": 15,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#1361cb",
            }
          }
        >
          Logout
        </Text>
      </Component>
    </TouchableOpacity>
    <Component
      style={
        Object {
          "flex": 1,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#676767",
          "fontSize": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    >
      Most illustrations used in this app come from Freepik
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#676767",
          "fontSize": 11,
          "fontWeight": "600",
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      Designed by freepik.com
    </Text>
  </Component>
</Component>
`;

exports[`Pages Settings android should renders correctly 2`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    title="Settings"
  />
  <Component
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "backgroundColor": "#E2E4E5",
        },
      ]
    }
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "paddingHorizontal": 20,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "flex": 1,
            "fontSize": 14,
          }
        }
      >
        Enable cutting edge features
      </Text>
      <Switch
        disabled={false}
        onValueChange={[MockFunction]}
        thumbTintColor="#355974"
        value={false}
      />
    </Component>
    <Component
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        If enabled, your application will automatically install cutting edge features. Beware though: you might install versions that are not stable yet.
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#676767",
            "fontSize": 12,
            "marginTop": 10,
          }
        }
      >
        Version: 1.0.0
      </Text>
    </Component>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Object {
            "backgroundColor": "white",
            "paddingHorizontal": 20,
            "paddingVertical": 15,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#1361cb",
            }
          }
        >
          Logout
        </Text>
      </Component>
    </TouchableOpacity>
    <Component
      style={
        Object {
          "flex": 1,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#676767",
          "fontSize": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    >
      Most illustrations used in this app come from Freepik
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#676767",
          "fontSize": 11,
          "fontWeight": "600",
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      Designed by freepik.com
    </Text>
  </Component>
</Component>
`;

exports[`Pages Settings ios should renders correctly 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    title="Settings"
  />
  <Component
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "backgroundColor": "#E2E4E5",
        },
      ]
    }
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "paddingHorizontal": 20,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "flex": 1,
            "fontSize": 14,
          }
        }
      >
        Enable cutting edge features
      </Text>
      <Switch
        disabled={false}
        onValueChange={[MockFunction]}
        thumbTintColor={null}
        value={true}
      />
    </Component>
    <Component
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        If enabled, your application will automatically install cutting edge features. Beware though: you might install versions that are not stable yet.
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#676767",
            "fontSize": 12,
            "marginTop": 10,
          }
        }
      >
        Version: 1.0.0
      </Text>
    </Component>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Object {
            "backgroundColor": "white",
            "paddingHorizontal": 20,
            "paddingVertical": 15,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#1361cb",
            }
          }
        >
          Logout
        </Text>
      </Component>
    </TouchableOpacity>
    <Component
      style={
        Object {
          "flex": 1,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#676767",
          "fontSize": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    >
      Most illustrations used in this app come from Freepik
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#676767",
          "fontSize": 11,
          "fontWeight": "600",
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      Designed by freepik.com
    </Text>
  </Component>
</Component>
`;

exports[`Pages Settings ios should renders correctly 2`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    title="Settings"
  />
  <Component
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "backgroundColor": "#E2E4E5",
        },
      ]
    }
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "paddingHorizontal": 20,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "flex": 1,
            "fontSize": 14,
          }
        }
      >
        Enable cutting edge features
      </Text>
      <Switch
        disabled={false}
        onValueChange={[MockFunction]}
        thumbTintColor={null}
        value={false}
      />
    </Component>
    <Component
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        If enabled, your application will automatically install cutting edge features. Beware though: you might install versions that are not stable yet.
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#676767",
            "fontSize": 12,
            "marginTop": 10,
          }
        }
      >
        Version: 1.0.0
      </Text>
    </Component>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Object {
            "backgroundColor": "white",
            "paddingHorizontal": 20,
            "paddingVertical": 15,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#1361cb",
            }
          }
        >
          Logout
        </Text>
      </Component>
    </TouchableOpacity>
    <Component
      style={
        Object {
          "flex": 1,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#676767",
          "fontSize": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    >
      Most illustrations used in this app come from Freepik
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#676767",
          "fontSize": 11,
          "fontWeight": "600",
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      Designed by freepik.com
    </Text>
  </Component>
</Component>
`;
